<resources>
	<string name="app_name">Podcast Master</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<!-- Menu -->
	<string name="menu_drawer_my_feeds" translatable="true">My Feeds</string>
	<string name="menu_drawer_my_downloads" translatable="true">My Downloads</string>

	<string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

	<!-- Default strings -->
	<string name="default_widget_podcast_title" translatable="true">No available media</string>
	<string name="default_widget_episode_title" translatable="true">Download some episodes!</string>

	<!-- My Feeds -->
	<string name="add_feed_dialog_title">Add RSS Feed</string>
	<string name="add_feed_dialog_content">Enter the URL of an RSS feed you are interested in to add it to your feeds!</string>
	<string name="add_feed_dialog_hint">URL of RSS Feed</string>
	<string name="add_feed_dialog_negative">Cancel</string>
	<string name="add_feed_error_dialog_title">Error</string>
	<string name="add_feed_success_dialog_title">Success</string>
	<string name="add_feed_success_inserted_dialog_content" translatable="true">
		Successfully added %1$s!  Enjoy!
	</string>
	<string name="add_feed_success_updated_dialog_content" translatable="true">
		%1$s has already been added, and it has been updated with the most recent data! Enjoy!
	</string>
	<string name="my_feeds_empty_string" translatable="true">
		You don\'t have any feeds!\nClick the \'+\' button to add some!
	</string>

	<!-- Episode List -->
	<string name="episode_list_empty_string" translatable="true">
		Looks like this feed doesn\'t have any episodes!
	</string>

	<string name="add_feed_progress_dialog_downloading">Step 1 of 3 - Requesting feed data from URL&#8230;</string>
	<string name="add_feed_progress_dialog_xml_processing">Step 2 of 3 - Processing feed information&#8230;</string>
	<string name="add_feed_progress_dialog_saving_content">Step 3 of 3 - Storing feed content for offline use&#8230;</string>

	<string name="remove_feed_dialog_title" translatable="true">Are you sure you want to remove %1$s?</string>
	<string name="remove_feed_dialog_content" translatable="true">%1$s, all of its episodes, and any downloaded content will be deleted.</string>
	<string name="remove_feed_dialog_negative_text" translatable="true">@string/cancel</string>
	<string name="remove_feed_dialog_positive_text" translatable="true">Remove %1$s</string>

	<!-- Downloads List -->
	<string name="my_downloads_empty_string" translatable="true">
		You don\'t have any downloads!\nDownload some from your favorite podcast feeds!
	</string>

	<!-- Episode Detail -->
	<string name="download_button_text" translatable="true">Download Now</string>
	<string name="delete_download_button_text" translatable="true">Delete Download</string>
	<string name="play_button_text" translatable="true">Play Now</string>
	<string name="episode_download_progress_dialog_start">Starting download&#8230;</string>
	<string name="episode_download_progress_dialog_known_percentage">Downloading now&#8230;%1$s%%</string>
	<string name="episode_download_progress_dialog_unknown_percentage">Downloading episode, unable to determine percentage (blame the podcast provider), but it\'s downloading&#8230;%1$s bytes</string>
	<string name="episode_download_only_one_allowed">You can only donwload one episode at a time!  Currently downloading %1$s!</string>

	<string name="media_player_hours_duration"></string>

	<!-- Generic strings used everywhere -->
	<string name="OK">OK</string>
	<string name="cancel">Cancel</string>

	<!-- Error messages -->
	<string name="download_rss_feed_exception_invalid_url_supplied" translatable="true">
		Sorry, that is not a valid URL! (%1$d - %2$s)
	</string>
	<string name="download_rss_feed_exception_data_retrieval_failed" translatable="true">
		Sorry, unable to acquire feed data! (%1$d - %2$s)
	</string>
	<string name="download_rss_feed_exception_data_parsing_failed" translatable="true">
		Sorry, unable to parse feed data! (%1$d - %2$s)
	</string>
	<string name="download_rss_feed_exception_data_insertion_failed" translatable="true">
		Sorry, unable to add the acquired data! (%1$d)
	</string>

	<string name="unknown_exception_code" translatable="true">
		Sorry, an error has occurred!  No further information is available.  Please try again. (%1$d - %2$s)
	</string>

	<!-- Exception messages -->
	<string name="bad_http_response_code" translatable="true">
		Bad response code (%1$d)
	</string>
	<string name="bad_channel_model_exception" translatable="true">
		Bad channel model: title was (%1$s), rssURL was (%2$s)
	</string>
	<string name="bad_episode_model_exception" translatable="true">
		Bad RSSEpisode model: title was (%1$s), pubdate was (%2$s), enclosureURL was (%3$s), guid was (%4$s)
	</string>

	<!-- Content Descriptions -->
	<string name="content_description_play_control_button" translatable="true">Play Control Button</string>
	<string name="content_description_previous_control_button" translatable="true">Seek 10 Previous Control Button</string>
	<string name="content_description_next_control_button" translatable="true">Seek 10 Next Control Button</string>
	<string name="content_description_channel_image" translatable="true">Podcast Artwork Image</string>
</resources>
