<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:background="@color/colorPrimaryDark"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<RelativeLayout android:layout_width="match_parent"
					android:layout_height="wrap_content">
		<ImageView
			android:id="@+id/image_view_channel"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_alignParentTop="true"
			android:background="@color/colorPrimary"
			android:scaleType="centerCrop"
			android:contentDescription="@string/content_description_channel_image"
		/>
		<TextView
			android:id="@+id/text_view_episode_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/image_view_channel"
			android:layout_margin="8dp"
			android:textSize="24sp"
			android:textColor="#FFFFFF"
		/>
		<TextView
			android:id="@+id/text_view_episode_pub_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/text_view_episode_title"
			android:layout_margin="8dp"
			android:textSize="16sp"
			android:textColor="#FFFFFF"
		/>
		<TextView
			android:id="@+id/text_view_episode_duration"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/text_view_episode_pub_date"
			android:layout_margin="8dp"
			android:textSize="16sp"
			android:textColor="#FFFFFF"
		/>
		<TextView
			android:id="@+id/text_view_episode_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/text_view_episode_duration"
			android:layout_margin="8dp"
			android:textSize="16sp"
			android:textColor="#FFFFFF"
		/>
		<Button
			android:id="@+id/button_download"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/download_button_text"
			android:layout_below="@id/text_view_episode_description"
			android:layout_centerHorizontal="true"
		/>
		<Button
			android:id="@+id/button_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete_download_button_text"
			android:layout_below="@id/button_download"
			android:layout_centerHorizontal="true"
			android:visibility="gone"
		/>
	</RelativeLayout>

</ScrollView>